fixed registry item to wrap as needed depending on screen size

--- a/src/app/styles.module.css
+++ b/src/app/styles.module.css
@@ -48,6 +48,7 @@
 .registryItem {
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   border: 1px solid #000000;
   padding: 10px;
